# cargo-tui

./: Cargo.toml  README.md  package.json
.github/workflows/: release.yml
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
src/: app.rs  config.rs  crates_io.rs  error.rs  main.rs  runner.rs  tui.rs  ui.rs  workspace.rs
