[package]
name = "cargo-tui"
version = "0.1.0"
edition = "2024"
description = "A gitui-style TUI for cargo"
license = "MIT"
repository = "https://github.com/cet-t/cargo-tui"

[[bin]]
name = "cargo-tui"
path = "src/main.rs"

[dependencies]
ratatui   = "0.29"
crossterm = "0.28"
tokio     = { version = "1", features = ["full"] }
reqwest   = { version = "0.12", features = ["json"] }
clap      = { version = "4", features = ["derive"] }
anyhow    = "1"
thiserror = "2"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
toml      = "0.8"
